changed yaml file and eliminated unused imports

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,4 +30,4 @@ service:
       notFound: no such movie found!
   user:
     exception:
-      notFound: no such movie found!
+      notFound: no such user found!
